fix: various fixes - removing all px in favour of rem - aligned all the articles - fixed the colours - applied the border top colour to all the articles and widgets

--- a/css/_footer.css
+++ b/css/_footer.css
@@ -37,6 +37,13 @@ main.blog > footer a:hover {
 main.blog > footer > section.social.links {
   margin-left: auto;
   margin-right: 0.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main.blog > footer > section.social.links > header {
+  display: none;
 }
 
 /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
@@ -60,6 +67,10 @@ main.blog > footer > section.social.links {
   main.blog > footer > section.social.links {
     margin-right: 1em;
   }
+
+  main.blog > footer > section.social.links > header {
+    display: block;
+  }
 }
 
 /* tablet, landscape iPad, lo-res laptops ands desktops */
@@ -74,5 +85,9 @@ main.blog > footer > section.social.links {
 
   main.blog > footer > section.social.links {
     margin-left: 2em;
+  }
+
+  main.blog > footer > section.social.links > header {
+    display: block;
   }
 }
