--- a/css/_posts.css
+++ b/css/_posts.css
@@ -9,7 +9,12 @@ section.posts {
 section.posts article,
 section.posts aside.comments {
   width: 85%;
-  background: #fff;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-top: 0.01rem solid #00b5ad !important;
+}
+
+section.posts article > a * {
+  color: #333;
 }
 
 section.posts article.preview {
@@ -21,13 +26,12 @@ section.posts aside.comments1 {
   width: 85%;
   display: inline-block;
   vertical-align: top;
-  background: #fff;
+  background-color: rgba(255, 255, 255, 0.85);
 }
 
 section.posts > article figure {
   width: 100%;
   margin: 0;
-  height: 17em;
 }
 
 section.posts > article:not(.preview) figure {
@@ -36,10 +40,10 @@ section.posts > article:not(.preview) figure {
 
 section.posts > article figure > img {
   width: 100%;
-  height: 100%;
+  height: 17em;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0% 0%;
+  background-position: center;
 }
 
 section.posts > article header > * {
@@ -48,6 +52,7 @@ section.posts > article header > * {
 
 section.posts > article header .category {
   text-transform: uppercase;
+  font-weight: 500;
 }
 
 section.posts > article header .title {
@@ -74,10 +79,9 @@ section.posts > aside.comments .comment footer {
   padding: 0.5em;
 }
 
-section.posts > article:not(.preview) footer {
+section.posts > article footer {
   margin-top: 2rem;
   border-top: 0.01rem solid #00b5ad;
-  border-bottom: 0.01rem solid #00b5ad;
 }
 
 section.posts .comments-link {
@@ -92,7 +96,7 @@ section.posts .comments-number {
   color: #00b5ad;
 }
 
-section.posts footer > * {
+section.posts article footer > * {
   color: #999;
 }
 
@@ -173,7 +177,7 @@ section.posts > aside.comments > footer > form > textarea {
 section.posts > aside.comments > footer > form > input[type='submit'] {
   cursor: pointer;
   border: 0.01rem solid #00b5ad;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.85);
   font-family: 'Cormorant Garamond', serif;
   font-style: italic;
   font-size: 1.15rem;
@@ -207,5 +211,18 @@ section.posts > aside.comments > footer > form > input[type='submit']:hover {
 
   section.posts.preview article {
     width: 90%;
+    min-height: 35rem;
+  }
+
+  section.posts.preview article > a {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: inherit;
+  }
+
+  section.posts.preview article footer {
+    width: 100%;
+    margin-top: auto;
   }
 }
