--- a/css/_shoulder.css
+++ b/css/_shoulder.css
@@ -9,9 +9,9 @@ section.shoulder * {
 }
 
 section.shoulder > aside.widget {
-  margin: 0 0 26px;
-  padding: 0 0 20px;
-  background: rgba(255, 255, 255, 0.85);
+  margin: 0 0 1.9rem;
+  padding: 0 0 1.5rem;
+  background-color: rgba(255, 255, 255, 0.85);
   border-top: 0.01rem solid #00b5ad;
   font-family: 'Cormorant Garamond', serif;
 }
@@ -38,7 +38,7 @@ section.shoulder > aside.widget .primary.title,
 section.shoulder > aside.widget.related-post .category {
   padding: 0;
   text-transform: capitalize;
-  margin: 30px 0 0;
+  margin: 2.2rem 0 0;
   font-weight: 500;
 }
 
@@ -54,25 +54,28 @@ section.shoulder > aside.widget.related-post .title {
   word-break: break-word;
 }
 
-section.shoulder > aside.widget.newsletter > input[type='text'] {
-  height: 40px;
-  line-height: 40px;
-  font-size: 1em;
-  background: #eef8f7;
-  border: 0;
-  text-align: center;
-  width: 85%;
+section.shoulder > aside.widget.newsletter > footer {
+  display: grid;
+  width: 100%;
 }
 
-section.shoulder > aside.widget.newsletter > input[type='submit'] {
+section.shoulder > aside.widget.newsletter > footer > input[type='text'] {
+  grid-area: 1 / 1;
+  line-height: 2.8rem;
+  background-color: #eef8f7;
+  border: 0.01rem solid rgba(255, 255, 255, 0.85);
+  text-align: center;
+  width: 85%;
+  margin: auto;
+}
+
+section.shoulder > aside.widget.newsletter > footer > input[type='submit'] {
+  grid-area: 1 / 1;
   color: #00b5ad;
-  position: absolute;
-  right: 4%;
-  margin-top: 4.65em;
   border: none;
   background: 0 0;
   cursor: pointer;
-  font-size: 1.15em;
+  margin-left: 70%;
 }
 
 section.shoulder > aside.widget figure {
@@ -97,15 +100,17 @@ section.shoulder > aside.widget .description {
 
 section.shoulder > aside.widget.popular > ol {
   list-style-type: none;
+  padding-inline-start: 0;
+  margin: 0 1.5rem;
 }
 
 section.shoulder > aside.widget.popular > ol > li {
   counter-increment: step-counter;
-  line-height: 18px;
-  padding: 2px 0 0 40px;
-  margin: 1em 0 31px;
+  line-height: 1.3rem;
+  padding: 0.15rem 0 0 2.8rem;
   position: relative;
-  font-size: 1.1em;
+  margin: 1.1rem 0 0 1.4rem;
+  font-size: 1.2rem;
 }
 
 section.shoulder > aside.widget.popular > ol > li:nth-child(n + 6) {
@@ -115,15 +120,20 @@ section.shoulder > aside.widget.popular > ol > li:nth-child(n + 6) {
 section.shoulder > aside.widget.popular > ol > li:before {
   content: counter(step-counter);
   margin-right: 0;
-  font-size: 35px;
+  font-size: 2.5rem;
   font-family: Prata, serif;
   color: #b7b7b7;
-  width: 53px;
+  width: 4rem;
   text-align: center;
   position: absolute;
   top: 33%;
-  left: -10px;
+  left: -3%;
   -webkit-font-smoothing: antialiased;
+}
+
+section.shoulder > aside.widget.popular > ol > li > a {
+  font-family: 'Cormorant Garamond', serif;
+  font-style: italic;
 }
 
 section.shoulder > aside.widget.popular > ol > li > a:hover {
@@ -132,7 +142,7 @@ section.shoulder > aside.widget.popular > ol > li > a:hover {
 
 section.shoulder > aside.widget.popular > .more {
   font-size: 1.2em;
-  margin-top: 20px;
+  margin-top: 1.5rem;
   color: #00b5ad;
 }
 
