--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,6 @@ main.blog {
     50px
     auto
     50px;
-  border: 2px solid aqua;
   grid-template-areas:
     'header header'
     'nav nav'
